# ChangeLog for sys-fs/devfsd
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/devfsd/ChangeLog,v 1.19 2005/02/12 01:05:43 vapier Exp $

  11 Feb 2005; Mike Frysinger <vapier@gentoo.org> files/devfsd.conf:
  Add tun fix #51467 by Steven Wagner.

  20 Jan 2005; Mike Frysinger <vapier@gentoo.org> devfsd-1.3.25-r8.ebuild:
  Make sure we keep /etc/devfsd around #78825 by George Henson.

  10 Jan 2005; Ciaran McCreesh <ciaranm@gentoo.org> devfsd-1.3.25-r8.ebuild:
  Added in a message with a link to the Device File System Guide, bug #77326

  03 Dec 2004; Mike Frysinger <vapier@gentoo.org> devfsd-1.3.25-r8.ebuild:
  Dont use /usr/src/linux for headers #73198.

  16 Oct 2004; Mike Frysinger <vapier@gentoo.org> files/devfsd.conf,
  devfsd-1.3.25-r8.ebuild:
  Move devfs files from baselayout back into this package.

  29 Sep 2004; Jason Wever <weeve@gentoo.org> devfsd-1.3.25-r8.ebuild:
  Stable on sparc.

  30 Jun 2004; Aron Griffis <agriffis@gentoo.org> devfsd-1.3.25-r8.ebuild:
  stable on alpha and ia64

  19 Jun 2004; <solar@gentoo.org> devfsd-1.3.25-r8.ebuild,
  files/devfsd-1.3.25-no-nis.patch:
  added patch to allow uclibc to compile without nis

  12 May 2004; Alexander Gabert <pappy@gentoo.org> devfsd-1.3.25-r6.ebuild,
  devfsd-1.3.25-r7.ebuild:
  changed hardened-gcc logic to filter-flags

*devfsd-1.3.25-r6 (16 Mar 2004)
*devfsd-1.3.25-r7 (16 Mar 2004)
*devfsd-1.3.25-r8 (16 Mar 2004)

  16 Mar 2004; Seemant Kulleen <seemant@gentoo.org> devfsd-1.3.24.ebuild,
  devfsd-1.3.25-r3.ebuild, devfsd-1.3.25-r4.ebuild, devfsd-1.3.25-r5.ebuild,
  devfsd-1.3.25-r6.ebuild, devfsd-1.3.25-r7.ebuild, devfsd-1.3.25-r8.ebuild:
  Version bumps so that it PROVIDES virtual/dev-manager. r3->r6, r4->r7, r5->r8,
  otherwise no other (functional) changes

  02 Mar 2004; Brian Jackson <iggy@gentoo.org> devfsd-1.3.25-r5.ebuild:
  adding initial s390 support

  12 Feb 2004; <solar@gentoo.org> devfsd-1.3.24.ebuild,