@@ -1,8 +1,8 @@
-MD5 ba1816039561733dccf919d73d3865e4 ChangeLog 5581
-MD5 e646b3b1d395a11010bf32d82c1fa749 devfsd-1.3.25-r8.ebuild 1547
+MD5 ae0c2b16dc04147e527a47002f2f6d25 devfsd-1.3.25-r8.ebuild 1553
+MD5 c3ba097fee76aa21b861a317295d51d0 ChangeLog 5737
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
+MD5 3df00d60f0ad517c5489f558c1a95056 files/devfsd-1.3.25-no-nis.patch 2142
+MD5 9483221bc19786c3f7cb5df05a664477 files/devfsd-1.3.25-pic.patch 529
 MD5 c172caaf62b5ab4efc52f472220e2a09 files/devfsd.conf 5992
 MD5 41a6be534a78f5a0ad994b10e4134e6e files/devfsd-1.3.25-kernel-2.5.patch 3929
 MD5 b8ec7858c1ac54c47302ca839a52188f files/digest-devfsd-1.3.25-r8 65
-MD5 9483221bc19786c3f7cb5df05a664477 files/devfsd-1.3.25-pic.patch 529
-MD5 3df00d60f0ad517c5489f558c1a95056 files/devfsd-1.3.25-no-nis.patch 2142
