@@ -1,6 +1,10 @@
 # ChangeLog for sys-fs/devfsd
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/devfsd/ChangeLog,v 1.19 2005/02/12 01:05:43 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/devfsd/ChangeLog,v 1.20 2005/05/30 02:45:55 solar Exp $
+
+  29 May 2005; <solar@gentoo.org> devfsd-1.3.25-r8.ebuild:
+  - update sys-fs/devfsd to use libc expanded variable elibc_uclibc vs uclibc so
+  USE=-* works
 
   11 Feb 2005; Mike Frysinger <vapier@gentoo.org> files/devfsd.conf:
   Add tun fix #51467 by Steven Wagner.
